tests/errors/construction/literal-with-initializer.fn
---
Description: Initializer applied to a literal
Expected: compile error
---

type Program
{
    fn Main -> i32
    {
        var k = true { x: 1.0 }
        return 0
    }
}
